Scrollbar fixes

--- a/src/Prototypes/hmi/ui/public/css/HMI_style.css
+++ b/src/Prototypes/hmi/ui/public/css/HMI_style.css
@@ -395,13 +395,13 @@ input[type="checkbox"]{
   width: 0%;
   position: fixed;
   z-index: 995;
-  bottom: 0;
+  top: 0;
   right: 0;
   background-color: none;
   color: white;
   overflow-x: hidden;
   
-  padding-top: 60px;
+  padding-top: 80px;
   margin-top: 30px;
 }
 
@@ -409,13 +409,12 @@ input[type="checkbox"]{
   padding-top: 20px;
   margin-left: 30px;
   margin-right: 30px;
-  height: 85%;
-  position: fixed;
+  height: 3000px;
+  /*position: fixed;*/
   width: 440px;
-  top: 110px;
+  /*top: 110px;*/
   overflow-wrap: break-word;
   font-family: 'Roboto', sans-serif;
-  overflow-y: scroll;
 }
 
 #filter-menu {
@@ -430,7 +429,7 @@ input[type="checkbox"]{
   color: white;
   overflow-x: hidden;
   
-  padding-top: 60px;
+  padding-top: 80px;
   margin-top: 30px;
   
 }
@@ -439,14 +438,12 @@ input[type="checkbox"]{
   padding-top: 20px;
   margin-left: 30px;
   margin-right: 30px;
-  height: 85%;
-  position: fixed;
+  height: 3000px;
+  /*position: fixed;*/
   width: 440px;
-  top: 110px;
+  /*top: 110px;*/
   overflow-wrap: break-word;
   font-family: 'Roboto', sans-serif;
-  overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 #FAQ {  
@@ -469,7 +466,7 @@ input[type="checkbox"]{
   padding-top: 20px;
   margin-left: 30px;
   margin-right: 30px;
-  height: 85%;
+  height: 3000px;
   /*position: fixed;*/
   width: 440px;
   /*top: 110px;*/
@@ -499,7 +496,7 @@ input[type="checkbox"]{
   padding-top: 20px;
   margin-left: 30px;
   margin-right: 30px;
-  height: 85%;
+  height: 3000px;
   /*position: fixed;*/
   width: 440px;
   /*top: 110px;*/
@@ -532,8 +529,6 @@ input[type="checkbox"]{
   top: 110px;
   overflow-wrap: break-word;
   font-family: 'Roboto', sans-serif;
-  overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 #animal-popup #animal-popup-content img#markup_img {
@@ -787,14 +782,12 @@ i {
   .dropdown-menu.faq-content {
     width: 100%;
     height: 1150px;
-    max-height: 100vh !important;
+    min-height: 1150px;
   }
   .dropdown-menu.faq-content div + p {
     overflow-wrap: break-word;
     display: inline-block;
   }
-
-
 
   /* Style the checkboxes */
   .form-check-input {
@@ -949,10 +942,10 @@ i {
 
 .wrapper::-webkit-scrollbar-track-piece:end {
   background: transparent;
-  margin-bottom: 300px; 
+  margin-bottom: 500px; 
 }
 
 .wrapper::-webkit-scrollbar-track-piece:start {
   background: transparent;
-  margin-top: 300px;
+  margin-top: 100px;
 }
